--- a/app/views/account/user.html
+++ b/app/views/account/user.html
@@ -57,7 +57,7 @@
                         <div ng-show="common.user.social.google.id !== ''">
                             <span>{{ 'account-connect-to' | translate }}</span>
                             <span class="connect-to-SN-google">
-                                Google +</span>
+                                Google</span>
                         </div>
                         <div ng-show="common.user.social.facebook.id !== ''">
                             <span>{{ 'account-connect-to' | translate }}</span>
@@ -66,8 +66,8 @@
                         </div>
                     </div>
                     <div class="form-control">
-                        <input type="button" value="{{ 'google+' | translate }}" class="btn btn--social btn__login--google" ng-click="authenticate('google')" ng-if="common.user && !common.user.social.google.id" data-element="account-social-google-button" />
-                        <input type="button" value="{{ 'facebook' | translate }}" class="btn btn--social btn__login--facebook" ng-click="authenticate('facebook')" ng-if="common.user && !common.user.social.facebook.id" data-element="account-social-facebook-button" />
+                        <button class="btn btn--social btn__login--google rounded" ng-click="authenticate('google')" ng-if="common.user && !common.user.social.google.id" data-element="account-social-google-button">{{ 'Google' | translate }}</button>
+                        <button class="btn btn--social btn__login--facebook rounded" ng-click="authenticate('facebook')" ng-if="common.user && !common.user.social.facebook.id" data-element="account-social-facebook-button">{{ 'facebook' | translate }}</button>
                     </div>
                 </fieldset>
             </div>
