--- a/app/views/registerForm.html
+++ b/app/views/registerForm.html
@@ -5,13 +5,13 @@
         <div class="social--buttons__container">
             <ul class="row">
                 <li class="social--button__container">
-                    <button class="btn btn--social btn__login--facebook" ng-click="authenticate('facebook')">
+                    <button class="btn btn--social btn__login--facebook rounded" ng-click="authenticate('facebook')">
                         {{ 'facebook' | translate }}
                     </button>
                 </li>
                 <li id="authorize-button" class="social--button__container">
-                    <button id="authorize-button" class="btn btn--social btn__login--google" ng-click="authenticate('google')">
-                        {{ 'google+' | translate }}
+                    <button id="authorize-button" class="btn btn--social btn__login--google rounded" ng-click="authenticate('google')">
+                        {{ 'Google' | translate }}
                     </button>
                 </li>
             </ul>
