--- a/app/styles/components/_buttons.scss
+++ b/app/styles/components/_buttons.scss
@@ -187,11 +187,12 @@
 
 .btn--social {
     width: 108px;
-    font-size: 0.9375em;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(33,33,33,0.5);
+    font-size: 14px;
     font-weight: bold;
     padding: 0.9em;
     color: white;
-    height: 34px;
+    height: 38px;
     line-height: 10px;
     transition: background-color 120ms linear;
 }
