hotfix4.0.11 fix: uppercase

--- a/app/views/loginForm.html
+++ b/app/views/loginForm.html
@@ -12,7 +12,7 @@
                 </li>
                 <li id="authorize-button" class="social--button__container">
                     <button id="authorize-button" class="btn btn--social btn__login--google rounded" ng-click="authenticate('google')">
-                        {{ 'google' | translate }}
+                        {{ 'Google' | translate }}
                     </button>
                 </li>
             </ul>
