--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -11,7 +11,7 @@
     overflow-y: auto;
 
     .btn__login--submit {
-        background-color: #000;
+        background-color: $black;
         width: 100%;
         height: 50px;
         border-radius: 0.2em;
@@ -21,8 +21,8 @@
         height: 35px;
         font-size: 12px;
         width: 100%;
-        background-color: #C0C0C0;
-        color: black;
+        background-color: $grey-light;
+        color: $black;
         border-radius: 4px;
     }
 
@@ -36,7 +36,7 @@
     .btn--forgot,
     .btn--forgot-error,
     a {
-        color: #629300;
+        color: $green;
         text-decoration: underline;
     }
 
@@ -53,7 +53,7 @@
     }
 
     .btn--forgot-error {
-        color: #cc0001;
+        color: $red;
         background-color: inherit;
         text-align: center;
     }
@@ -61,8 +61,8 @@
     &#formForgot {
         .btn--disabled {
             width: 100%;
-            color: red;
-            border: 1px solid red;
+            color: $red-light;
+            border: 1px solid $red-light;
         }
     }
 }
@@ -70,14 +70,14 @@
 .separator {
     text-align: center;
     position: relative;
-    color: #8892AC;
+    color: $grey-medium;
     padding-top: 1em;
     padding-bottom: 1em;
 
     span {
         display: inline-block;
         padding: 0 0.5em;
-        background-color: #F5F3F3;
+        background-color: $grey-lighter;
         z-index: 2;
         position: relative;
         cursor: default;
@@ -88,7 +88,7 @@
         content: '';
         position: absolute;
         height: 2px;
-        border-top: 1px solid #CCCACA;
+        border-top: 1px solid $grey-border;
         top: 5px;
         bottom: 0;
         left: 0;
@@ -156,7 +156,7 @@
 }
 
 .form--login__container {
-    background-color: #F1F1F1;
+    background-color: $grey-lighter;
     border: 1px solid #CCC;
     padding: 1em;
     border-radius: 0.4em;
@@ -164,7 +164,7 @@
     position: relative;
 
     .h3 {
-        color: black;
+        color: $black;
     }
 }
 
