fix: postcss autoprefixer support fill -> stretch, not chrome

--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -593,7 +593,8 @@ $support-width: 900px;
         }
 
         p {
-            // width: -webkit-fill-available;
+            // stretch is not avaliable for chrome at 2017/12/20
+            /* autoprefixer: off */
             width: fill;
             width: -webkit-fill-available;
         }
